@@ -93,6 +93,7 @@ Version 1.4 (X/X/XXX)
   * Fixed a lot of drag and drop bugs, such as being able to drag a group into another group.
   * Tooltips now display for collapsed groups. (#11951)
   * The group count is no longer always displayed for collapsed contacts.
+  * "Show Group Visible Count" has been returned to "Show Group Online Count", and counts only online, visible contacts. (#11362)
  
  Message Styles
   * You can now specify a different style for group chats, and customize all of the preferences independently of a regular chat. (#87)
